--- a/relaxr/Working jQuery Relaxr/Relaxr-Project-master/relaxr/css/style.css
+++ b/relaxr/Working jQuery Relaxr/Relaxr-Project-master/relaxr/css/style.css
@@ -53,7 +53,6 @@ body {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   font-weight: 300;
   background: #f0efef;
-  margin: 0 auto;
 }
 a {
   text-decoration: none;
@@ -65,10 +64,10 @@ a {
 /*******************************************/
 
 /* Center the container */
-/*.container {
+.container {
   width: 960px;
-  margin: 0 auto;*/
-
+  margin: 0 auto;
+}
 
 .logo {
   font-size: 48px;
@@ -110,7 +109,6 @@ a {
   width: 240px;
   display: inline-block;
   vertical-align: top;
-  margin-left: 100px;
 }
 .post {
   border-bottom: 1px solid #043049;
