--- a/relaxr/Responsive Relaxr/css/style.css
+++ b/relaxr/Responsive Relaxr/css/style.css
@@ -65,14 +65,15 @@ a {
 /*******************************************/
 
 /* Center the container */
-/*.container {
+.container {
   width: 960px;
-  margin: 0 auto;*/
-
+  margin: 0 auto;
+}
 
 .logo {
   font-size: 48px;
   font-weight: 800;
+  padding-left: 10px;
 }
 
 .relxr-header {
@@ -88,6 +89,7 @@ a {
 .relxr-header nav {
   float: right;
   margin-top: 15px;
+  padding: 10px 30px 10px 10px;
 }
 .relxr-header nav ul li {
   display: inline-block;
@@ -106,11 +108,15 @@ a {
   margin-right: 20px;
   vertical-align: top;
 }
+
+.mainart{
+  min-width: 700px;
+}
+
 .relaxr-category-sidebar {
   width: 240px;
   display: inline-block;
   vertical-align: top;
-  margin-left: 100px;
 }
 .post {
   border-bottom: 1px solid #043049;
@@ -203,6 +209,10 @@ a {
   margin-top: 50px;
 }
 
+.buttonrow{
+  background-color: yellow;
+}
+
 .relaxr-site-footer {
   background: #121212;
   padding: 65px 0 45px;
@@ -222,7 +232,7 @@ a {
   color: #fff;
   font-weight: 600;
 }
-.hide {
+.hideme {
   display: none;
 }
 
